--- a/izooto/build.gradle
+++ b/izooto/build.gradle
@@ -47,7 +47,7 @@ buildscript {
 
 ext {
     bintrayRepo = 'izooto'
-    bintrayName = 'notification-sdk'
+    bintrayName = 'notification-sdk'//notification-sdk
     publishedGroupId = 'com.izooto'
     libraryName = 'notification-sdk'
     artifact = 'notification-sdk' //This artifact name should be the same with library module name
@@ -158,12 +158,12 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     //noinspection GradleCompatible
    // implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.appcompat:appcompat:1.0.0'
+   // implementation 'androidx.appcompat:appcompat:1.0.0'
     //noinspection GradleCompatible
     implementation 'com.android.support:appcompat-v7:28.0.0'
 
-    implementation 'com.google.firebase:firebase-messaging:20.0.0'
+    implementation 'com.google.firebase:firebase-messaging:20.1.0'
    // implementation 'com.google.firebase:firebase-messaging:17.6.0'
-    api 'androidx.legacy:legacy-support-v4:1.0.0'
+    //api 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'org.testng:testng:6.9.6'
 }
