--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,8 +12,7 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         manifestPlaceholders = [
                 izooto_enc_key: 'b07dfa9d56fc64df',
-                izooto_app_id : "40493" ,//STAGING
-//                izooto_app_id : "27179"  //PRODUCTION
+                izooto_app_id : 40493,
         ]
     }
 
