Remove android x and downgrade support version

--- a/gradle.properties
+++ b/gradle.properties
@@ -6,8 +6,8 @@
 # http://www.gradle.org/docs/current/userguide/build_environment.html
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
-android.enableJetifier=true
-android.useAndroidX=true
+#android.enableJetifier=false
+#android.useAndroidX=flase
 org.gradle.jvmargs=-Xmx1536m
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
@@ -15,5 +15,5 @@ org.gradle.jvmargs=-Xmx1536m
 # org.gradle.parallel=true
 #gradle.publish.key=SxIfZIU4HtsZmXRZxP9C357saaMrCiWb
 #gradle.publish.secret=Yls8Rle0VhoFtw59Hadvpzgqx2T9aW0B
-bintray.user=izooto
-bintray.apikey=61fafe3eea92b9de65d1a952779e1ca00288cd1d
+#bintray.user=izooto
+#bintray.apikey=61fafe3eea92b9de65d1a952779e1ca00288cd1d
