--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,8 +7,8 @@ android {
         applicationId "com.app.izoototest"
         minSdkVersion 18
         targetSdkVersion 29
-        versionCode 1
-        versionName "1.0.0"
+        versionCode 2
+        versionName "1.0.2"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         manifestPlaceholders = [
                 izooto_enc_key: 'b07dfa9d56fc64df',
@@ -26,10 +26,17 @@ android {
     dependencies {
         implementation fileTree(dir: 'libs', include: ['*.jar'])
         //noinspection GradleCompatible
+      //  api 'com.android.support:support-v4:[26.0.0, 27.99.99]'
 
-        implementation 'com.android.support:appcompat-v7:28.0.0'
         //noinspection GradleCompatible
-        implementation 'com.android.support:design:28.0.0'
+       // implementation 'com.android.support:appcompat-v7:28.0.0'
+        //noinspection GradleCompatible
+      // api 'com.android.support:support-v4:[26.0.0, 27.99.99]'
+       // implementation 'com.google.android.material:material:1.0.0'
+        implementation 'com.android.support:support-v4:26.0.0'
+        implementation 'com.android.support:appcompat-v7:26.0.0'
+
+      //  implementation 'com.android.support:design:28.0.0'
 //        implementation 'com.izooto:notification-sdk:1.0.1'
     }
 }
