--- a/izooto/build.gradle
+++ b/izooto/build.gradle
@@ -8,8 +8,8 @@ android {
     defaultConfig {
         minSdkVersion 18
         targetSdkVersion 29
-        versionCode 2
-        versionName "1.0.1"
+        versionCode 3
+        versionName "1.0.2"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -45,107 +45,107 @@ buildscript {
 //}
 
 
-ext {
-    bintrayRepo = 'izooto'
-    bintrayName = 'notification-sdk'//notification-sdk
-    publishedGroupId = 'com.izooto'
-    libraryName = 'notification-sdk'
-    artifact = 'notification-sdk' //This artifact name should be the same with library module name
-    libraryDescription = 'A push notification service which integrates with your app seamlessly'
+//ext {
+//    bintrayRepo = 'izooto'
+//    bintrayName = 'notification-sdk'//notification-sdk
+//    publishedGroupId = 'com.izooto'
+//    libraryName = 'notification-sdk'
+//    artifact = 'notification-sdk' //This artifact name should be the same with library module name
+//    libraryDescription = 'A push notification service which integrates with your app seamlessly'
+//
+//    siteUrl = 'https://github.com/iZootoNotifcation/android-sdk'
+//    gitUrl = 'https://github.com/iZootoNotifcation/android-sdk.git'
+//    libraryVersion = '1.0.0'
+//
+//    developerId = 'izooto'
+//    developerName = 'amit'
+//    developerEmail = 'izootosdk@datability.co'
+//    organization = 'izooto' // if you push to organization's repository.
+//    licenseName = 'The Apache Software License, Version 2.0'  //Example for license
+//    licenseUrl = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+//    allLicenses = ["Apache-2.0"]
+//}
+//
+//group = publishedGroupId
+//version = libraryVersion
+//
+//install {
+//    repositories.mavenInstaller {
+//        pom.project {
+//            packaging 'aar'
+//            groupId publishedGroupId
+//            artifactId artifact
+//
+//            name libraryName
+//            description libraryDescription
+//            url siteUrl
+//
+//            licenses {
+//                license {
+//                    name licenseName
+//                    url licenseUrl
+//                }
+//            }
+//            developers {
+//                developer {
+//                    id developerId
+//                    name developerName
+//                    email developerEmail
+//                }
+//            }
+//            scm {
+//                connection gitUrl
+//                developerConnection gitUrl
+//                url siteUrl
+//            }
+//        }
+//    }
+//}
+//
+//task sourcesJar(type: Jar) {
+//    classifier = 'sources'
+//    from android.sourceSets.main.java.srcDirs
+//}
+//
+//task javadoc(type: Javadoc) {
+//    source = android.sourceSets.main.java.srcDirs
+//    classpath += project.files(android.getBootClasspath().join(File.pathSeparator))
+//}
+//
+//task javadocJar(type: Jar, dependsOn: javadoc) {
+//    classifier = 'javadoc'
+//    from javadoc.destinationDir
+//}
 
-    siteUrl = 'https://github.com/iZootoNotifcation/android-sdk'
-    gitUrl = 'https://github.com/iZootoNotifcation/android-sdk.git'
-    libraryVersion = '1.0.0'
-
-    developerId = 'izooto'
-    developerName = 'amit'
-    developerEmail = 'izootosdk@datability.co'
-    organization = 'izooto' // if you push to organization's repository.
-    licenseName = 'The Apache Software License, Version 2.0'  //Example for license
-    licenseUrl = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
-    allLicenses = ["Apache-2.0"]
-}
-
-group = publishedGroupId
-version = libraryVersion
-
-install {
-    repositories.mavenInstaller {
-        pom.project {
-            packaging 'aar'
-            groupId publishedGroupId
-            artifactId artifact
-
-            name libraryName
-            description libraryDescription
-            url siteUrl
-
-            licenses {
-                license {
-                    name licenseName
-                    url licenseUrl
-                }
-            }
-            developers {
-                developer {
-                    id developerId
-                    name developerName
-                    email developerEmail
-                }
-            }
-            scm {
-                connection gitUrl
-                developerConnection gitUrl
-                url siteUrl
-            }
-        }
-    }
-}
-
-task sourcesJar(type: Jar) {
-    classifier = 'sources'
-    from android.sourceSets.main.java.srcDirs
-}
-
-task javadoc(type: Javadoc) {
-    source = android.sourceSets.main.java.srcDirs
-    classpath += project.files(android.getBootClasspath().join(File.pathSeparator))
-}
-
-task javadocJar(type: Jar, dependsOn: javadoc) {
-    classifier = 'javadoc'
-    from javadoc.destinationDir
-}
-
-artifacts {
-    archives javadocJar
-    archives sourcesJar
-}
+//artifacts {
+//    archives javadocJar
+//    archives sourcesJar
+//}
 
 Properties properties = new Properties()
 properties.load(project.rootProject.file('local.properties').newDataInputStream())
 
-bintray {
-    user = properties.getProperty("bintray.user")
-    key = properties.getProperty("bintray.apikey")
-
-    configurations = ['archives']
-    pkg {
-        repo = bintrayRepo
-        name = bintrayName
-        desc = libraryDescription
-        websiteUrl = siteUrl
-        vcsUrl = gitUrl
-        licenses = allLicenses
-        dryRun = false
-        publish = true
-        override = false
-        publicDownloadNumbers = true
-        version {
-            desc = libraryDescription
-        }
-    }
-}
+//bintray {
+//    user = properties.getProperty("bintray.user")
+//    key = properties.getProperty("bintray.apikey")
+//
+//    configurations = ['archives']
+//    pkg {
+//        repo = bintrayRepo
+//        name = bintrayName
+//        desc = libraryDescription
+//        websiteUrl = siteUrl
+//        vcsUrl = gitUrl
+//        licenses = allLicenses
+//        dryRun = false
+//        publish = true
+//        override = false
+//        publicDownloadNumbers = true
+//        version {
+//            desc = libraryDescription
+//        }
+//    }
+//}
 subprojects {
     tasks.withType(Javadoc).all { enabled = false }
 }
@@ -157,13 +157,15 @@ task wrapper(type: Wrapper) {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     //noinspection GradleCompatible
-   // implementation 'androidx.appcompat:appcompat:1.1.0'
-   // implementation 'androidx.appcompat:appcompat:1.0.0'
+  // implementation 'com.android.support:appcompat-v7:28.0.0'
+   // api 'com.android.support:support-v4:[26.0.0, 27.99.99]'
     //noinspection GradleCompatible
-    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.android.support:support-v4:26.0.0'
+    //noinspection GradleCompatible
+    implementation 'com.android.support:appcompat-v7:26.0.0'
+    implementation 'com.google.firebase:firebase-messaging:18.0.0'
 
-    implementation 'com.google.firebase:firebase-messaging:20.1.0'
-   // implementation 'com.google.firebase:firebase-messaging:17.6.0'
-    //api 'androidx.legacy:legacy-support-v4:1.0.0'
+
+    //implementation 'com.google.firebase:firebase-messaging:20.1.0'
     testImplementation 'org.testng:testng:6.9.6'
 }
