--- a/izooto/src/main/AndroidManifest.xml
+++ b/izooto/src/main/AndroidManifest.xml
@@ -39,6 +39,10 @@
             </intent-filter>
         </service>
 
+        <meta-data
+            tools:replace="android:value"
+            android:name="android.support.VERSION"
+            android:value="26.0.0" />
 
         <meta-data
             android:name="izooto_enc_key"
